--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "http://Dustin2400.github.io/portfolio2",
+  "homepage": "http://Dustin2400.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
